@@ -191,7 +191,12 @@ gimple_resimplify1 (gimple_seq *seq, gimple_match_op *res_op,
     {
       tree tem = NULL_TREE;
       if (res_op->code.is_tree_code ())
-	tem = const_unop (res_op->code, res_op->type, res_op->ops[0]);
+	{
+	  tree_code code = res_op->code;
+	  if (IS_EXPR_CODE_CLASS (TREE_CODE_CLASS (code))
+	      && TREE_CODE_LENGTH (code) == 1)
+	    tem = const_unop (res_op->code, res_op->type, res_op->ops[0]);
+	}
       else
 	tem = fold_const_call (combined_fn (res_op->code), res_op->type,
 			       res_op->ops[0]);
@@ -252,8 +257,13 @@ gimple_resimplify2 (gimple_seq *seq, gimple_match_op *res_op,
     {
       tree tem = NULL_TREE;
       if (res_op->code.is_tree_code ())
-	tem = const_binop (res_op->code, res_op->type,
-			   res_op->ops[0], res_op->ops[1]);
+	{
+	  tree_code code = res_op->code;
+	  if (IS_EXPR_CODE_CLASS (TREE_CODE_CLASS (code))
+	      && TREE_CODE_LENGTH (code) == 2)
+	    tem = const_binop (res_op->code, res_op->type,
+			       res_op->ops[0], res_op->ops[1]);
+	}
       else
 	tem = fold_const_call (combined_fn (res_op->code), res_op->type,
 			       res_op->ops[0], res_op->ops[1]);
@@ -325,9 +335,14 @@ gimple_resimplify3 (gimple_seq *seq, gimple_match_op *res_op,
     {
       tree tem = NULL_TREE;
       if (res_op->code.is_tree_code ())
-	tem = fold_ternary/*_to_constant*/ (res_op->code, res_op->type,
-					    res_op->ops[0], res_op->ops[1],
-					    res_op->ops[2]);
+	{
+	  tree_code code = res_op->code;
+	  if (IS_EXPR_CODE_CLASS (TREE_CODE_CLASS (code))
+	      && TREE_CODE_LENGTH (code) == 3)
+	    tem = fold_ternary/*_to_constant*/ (res_op->code, res_op->type,
+						res_op->ops[0], res_op->ops[1],
+						res_op->ops[2]);
+	}
       else
 	tem = fold_const_call (combined_fn (res_op->code), res_op->type,
 			       res_op->ops[0], res_op->ops[1], res_op->ops[2]);
